# slp-to-np

./: CMakeLists.txt  README.md
headers/: constants.h  reader.h  slp.h
headers/events/: common.h  game_end.h  game_start.h  payloads.h
headers/events/frames/: framebookend.h  frames.h  framestart.h  itemupdate.h  postframe.h  preframe.h
headers/numpy/: numpy_writer.h
headers/readers/: bin_reader.h
headers/utils/: endian.h
src/: main.cpp  reader.cpp  slp.cpp
src/events/: common.cpp  game_end.cpp  game_start.cpp  payloads.cpp
src/events/frames/: framebookend.cpp  frames.cpp  framestart.cpp  itemupdate.cpp  postframe.cpp  preframe.cpp
src/numpy/: numpy_writer.cpp
src/readers/: bin_reader.cpp
